[package]
name = "advent2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bare_metal_modulo = "1"
enum-iterator = "2"
num = "0.4"
indexmap = "2"
derive-getters = "0.5"
common_macros = "0.1"
trait-set = "0.3"
regex = "1.11.1"
hash_histogram = "0.9"
pancurses = "0.17"
itertools = "0.13"
priority-queue = "2.1.1"
multimap = "0.10"